--- a/.env
+++ b/.env
@@ -1,2 +1,9 @@
 PORT = 3000
 NODE_ENV=development
+DB_NAME=localhost
+
+DB_HOST=localhost
+DB_PORT=3307
+DB_USER=root
+DB_PASSWORD=123456
+DB_NAME=hoidanit
